layout odin background container

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <div class="odin-holder"><h1>ODIN</h1></div>
+      <div class="odin-container">
+        <div class="odin-holder">
+          <img src="imgs/odin-lined.png" />
+          <h1>ODIN</h1>
+        </div>
+      </div>
+      <div class="sign-up-container"></div>
     </div>
   </body>
 </html>
