--- a/index.html
+++ b/index.html
@@ -14,7 +14,60 @@
           <h1>ODIN</h1>
         </div>
       </div>
-      <div class="sign-up-container"></div>
+      <div class="sign-up-container">
+        <section class="info">
+          <h3>
+            This is not a real service! You know you need something like this in
+            your life to help you realize your deepest dreams.
+          </h3>
+          <h3>Sign up to get started.</h3>
+          <h3>You know you want to.</h3>
+        </section>
+        <div class="sign-up-form">
+          <div class="motivate">
+            <h3>Let's do this!</h3>
+          </div>
+          <form id="sign-up">
+            <div class="column">
+              <label for="firstName">FIRST NAME:</label>
+              <input type="text" name="firstName" id="firstName" required />
+              <label for="email">EMAIL:</label>
+              <input type="email" id="email" required />
+              <label for="password">PASSWORD:</label>
+              <input type="password" id="password" min="1" max="8" required />
+            </div>
+            <div class="column">
+              <label for="lastName">LAST NAME:</label>
+              <input type="text" id="lastName" required />
+              <label for="phoneNumber">PHONE NUMBER:</label>
+              <input
+                type="tel"
+                id="phoneNumber"
+                pattern="[0-9]{10}"
+                title="Please enter a 10 digit number."
+                required
+              />
+              <label for="password">CONFIRM PASSWORD:</label>
+              <input
+                type="password"
+                id="confrimPassword"
+                min="1"
+                max="8"
+                required
+              />
+            </div>
+          </form>
+          <div class="account-container">
+            <button form="sign-up">Create Account</button>
+            <p>
+              Already have an account?
+              <span style="color: #596d48; font-weight: bold; cursor: pointer"
+                >Log in</span
+              >
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
